# End-to-End-Apnea-Detection

./: .gitignore  README.md  gitignore  pyproject.toml  requirements.txt  template.py
config/: config.yaml  dir_config.yaml
research/: 01-data-ingestion.ipynb  trials.ipynb
src/apnea_detection/: __init__.py
src/apnea_detection/utils/: common.py
