[project]
name = "apnea_detection"
version = "0.1.0"
description = "End-to-end sleep apnea detection project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "vaibrainium" }]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "python-dotenv",
    "python-box",
    "dvc",
    "mlflow",
    "fastparquet>=2026.3.0",
    "pyarrow>=23.0.1",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
    "optuna>=4.8.0",
    "shap>=0.49.1",
    "ensure>=1.0.4",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20260510",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ipython",
]
notebook = [
    "jupyterlab",
    "notebook",
    "ipykernel",
]
